# open_webui_functions

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DOLT_REMOTE.md  Makefile  README.md  manifest  pyproject.toml  requirements.txt
.github/scripts/: build_gemini_suite.py  parse_tag.sh
.github/workflows/: gemini-enterprise-live-smoke.yml  gemini-live-smoke.yml  python-ci.yml  release.yml
.reports/: GCP_ENTERPRISE_TESTING_PREREQUISITES.md
dev/: .env.install.example  dev.sh  function_updater.py  release.sh
docs/development/: gemini-model-provenance-v1.yaml  gemini-suite-release.md
docs/plugins/filters/: gemini_enterprise_toggle.md  gemini_manifold_companion.md  gemini_map_grounding_toggle.md  gemini_paid_api.md  gemini_reasoning_toggle.md  gemini_url_context_toggle.md
docs/plugins/pipes/: gemini_manifold.md
examples/: associate_messages_to_files.py  bypass_files_processing.py  citations.py  fastapi_request.py  filter_template.py  inspect_file_bytes.py  installing_other_plugins.py  log_testing.py  pipe_template.py  pipe_template_verbose.py  status_messages.py  task_detection.py
plugins/archived/: README.md
plugins/filters/: gemini_enterprise_toggle.py  gemini_manifold_companion.py  gemini_map_grounding_toggle.py  gemini_reasoning_toggle.py  gemini_url_context_toggle.py  system_prompt_injector.py  trailing_whitespace_fixer.py
plugins/pipes/: gemini_manifold.py  gemini_models.yaml  venice_manifold.py
release/: gemini-suite-v3.0.0.md  gemini-suite-v3.0.0.yaml
tests/: test_gemini_manifold.py  test_gemini_model_catalog.py  test_gemini_model_provenance.py  test_gemini_release_contract.py  test_google_genai_interactions_contract.py  test_interactions_fixtures.py  test_interactions_removal_guard.py
tests/fakes/: __init__.py  genai_interactions.py
tests/fixtures/: __init__.py  interactions.py
tests/live/: README.md  test_gemini_interactions_live.py
utils/: gemini_yaml_wizard.py  manifold_types.py
